--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 :root {
-    --dark-gray-color: #212121;
-    --light-gray-color: #66757f;
-    --blue-color: #55acee;
+    --main-color: #08090A;
+    --second-color: #222823;
+    --light-gray-color: #575A5E;
     --white-color: #fafafa;
     --main-transition: 0.6s;
 }
@@ -12,7 +12,7 @@
     font-family: 'Chakra Petch', sans-serif;
 }
 body {
-    background-color: var(--dark-gray-color);
+    background-color: var(--main-color);
 }
 h2.title {
     margin: 50px auto 20px;
@@ -22,7 +22,7 @@ h2.title {
 .generated-password {
     width: 400px;
     margin: 0px auto 20px;
-    background-color: var(--light-gray-color);
+    background-color: var(--second-color);
     padding: 20px;
     display: flex;
     align-items: center;
@@ -34,17 +34,17 @@ h2.title {
     border: none;
     outline: none;
     padding: 10px;
-    background-color: var(--light-gray-color);
-    color: var(--dark-gray-color);
+    background-color: var(--second-color);
+    color: var(--white-color);
     font-size: 20px;
 }
 .generated-password input::placeholder {
     font-size: 20px;
-    color: var(--white-color);
+    color: var(--light-gray-color);
 }
 .generated-password .copy {
     cursor: pointer;
-    color: var(--blue-color);
+    color: var(--light-gray-color);
     transition: var(--main-transition);
 }
 .generated-password .copy:hover {
@@ -53,7 +53,7 @@ h2.title {
 .form {
     width: 400px;
     margin: 0px auto;
-    background-color: var(--light-gray-color);
+    background-color: var(--second-color);
     padding: 20px;
     color: var(--white-color);
 }
@@ -68,7 +68,7 @@ h2.title {
     flex: 1;
 }
 .form .length .output {
-    color: var(--dark-gray-color);
+    color: var(--main-color);
     font-size: 24px;
 }
 .form .checkbox {
@@ -84,7 +84,7 @@ h2.title {
     padding: 20px;
 }
 .strength span:last-child{
-    color: var(--dark-gray-color);
+    color: var(--main-color);
     font-size: 22px;
     font-weight: bold;
 }
@@ -92,15 +92,15 @@ button {
     width: 100%;
     padding: 15px;
     font-size: 20px;
-    border: 2px solid var(--blue-color);
-    background-color: var(--blue-color);
+    border: 2px solid var(--light-gray-color);
+    background-color: var(--light-gray-color);
     color: var(--white-color);
     transition: var(--main-transition);
     cursor: pointer;
 }
 button:hover {
-    background-color: var(--light-gray-color);
-    color: var(--dark-gray-color);
+    background-color: var(--second-color);
+    color: var(--main-color);
 }
 /* media queries */
 @media (max-width:768px) {
